tests/snapshots/transform__fragment_with_children.snap
---
source: tests/transform.rs
expression: fragment.transform()
---
Fragment {
    children: [
        Element(
            Element {
                tag: Native(
                    "div",
                ),
                attrs: [],
                children: [],
                raw: JSXElement {
                    span: Span {
                        lo: BytePos(
                            15,
                        ),
                        hi: BytePos(
                            26,
                        ),
                        ctxt: #0,
                    },
                    opening: JSXOpeningElement {
                        name: Ident(
                            Ident {
                                span: Span {
                                    lo: BytePos(
                                        16,
                                    ),
                                    hi: BytePos(
                                        19,
                                    ),
                                    ctxt: #0,
                                },
                                sym: Atom('div' type=static),
                                optional: false,
                            },
                        ),
                        span: Span {
                            lo: BytePos(
                                15,
                            ),
                            hi: BytePos(
                                20,
                            ),
                            ctxt: #0,
                        },
                        attrs: [],
                        self_closing: false,
                        type_args: None,
                    },
                    children: [],
                    closing: Some(
                        JSXClosingElement {
                            span: Span {
                                lo: BytePos(
                                    20,
                                ),
                                hi: BytePos(
                                    26,
                                ),
                                ctxt: #0,
                            },
                            name: Ident(
                                Ident {
                                    span: Span {
                                        lo: BytePos(
                                            22,
                                        ),
                                        hi: BytePos(
                                            25,
                                        ),
                                        ctxt: #0,
                                    },
                                    sym: Atom('div' type=static),
                                    optional: false,
                                },
                            ),
                        },
                    ),
                },
                is_static: true,
            },
        ),
        Element(
            Element {
                tag: Native(
                    "div",
                ),
                attrs: [],
                children: [],
                raw: JSXElement {
                    span: Span {
                        lo: BytePos(
                            33,
                        ),
                        hi: BytePos(
                            44,
                        ),
                        ctxt: #0,
                    },
                    opening: JSXOpeningElement {
                        name: Ident(
                            Ident {
                                span: Span {
                                    lo: BytePos(
                                        34,
                                    ),
                                    hi: BytePos(
                                        37,
                                    ),
                                    ctxt: #0,
                                },
                                sym: Atom('div' type=static),
                                optional: false,
                            },
                        ),
                        span: Span {
                            lo: BytePos(
                                33,
                            ),
                            hi: BytePos(
                                38,
                            ),
                            ctxt: #0,
                        },
                        attrs: [],
                        self_closing: false,
                        type_args: None,
                    },
                    children: [],
                    closing: Some(
                        JSXClosingElement {
                            span: Span {
                                lo: BytePos(
                                    38,
                                ),
                                hi: BytePos(
                                    44,
                                ),
                                ctxt: #0,
                            },
                            name: Ident(
                                Ident {
                                    span: Span {
                                        lo: BytePos(
                                            40,
                                        ),
                                        hi: BytePos(
                                            43,
                                        ),
                                        ctxt: #0,
                                    },
                                    sym: Atom('div' type=static),
                                    optional: false,
                                },
                            ),
                        },
                    ),
                },
                is_static: true,
            },
        ),
    ],
    is_static: true,
}
