tests/snapshots/transform__tag_extra_member.snap
---
source: tests/transform.rs
expression: element.transform()
---
Element {
    tag: Member(
        JSXMemberExpr {
            obj: Ident(
                Ident {
                    span: Span {
                        lo: BytePos(
                            2,
                        ),
                        hi: BytePos(
                            3,
                        ),
                        ctxt: #0,
                    },
                    sym: Atom('A' type=inline),
                    optional: false,
                },
            ),
            prop: Ident {
                span: Span {
                    lo: BytePos(
                        4,
                    ),
                    hi: BytePos(
                        5,
                    ),
                    ctxt: #0,
                },
                sym: Atom('b' type=static),
                optional: false,
            },
        },
    ),
    attrs: [],
    children: [],
    raw: JSXElement {
        span: Span {
            lo: BytePos(
                1,
            ),
            hi: BytePos(
                12,
            ),
            ctxt: #0,
        },
        opening: JSXOpeningElement {
            name: JSXMemberExpr(
                JSXMemberExpr {
                    obj: Ident(
                        Ident {
                            span: Span {
                                lo: BytePos(
                                    2,
                                ),
                                hi: BytePos(
                                    3,
                                ),
                                ctxt: #0,
                            },
                            sym: Atom('A' type=inline),
                            optional: false,
                        },
                    ),
                    prop: Ident {
                        span: Span {
                            lo: BytePos(
                                4,
                            ),
                            hi: BytePos(
                                5,
                            ),
                            ctxt: #0,
                        },
                        sym: Atom('b' type=static),
                        optional: false,
                    },
                },
            ),
            span: Span {
                lo: BytePos(
                    1,
                ),
                hi: BytePos(
                    6,
                ),
                ctxt: #0,
            },
            attrs: [],
            self_closing: false,
            type_args: None,
        },
        children: [],
        closing: Some(
            JSXClosingElement {
                span: Span {
                    lo: BytePos(
                        6,
                    ),
                    hi: BytePos(
                        12,
                    ),
                    ctxt: #0,
                },
                name: JSXMemberExpr(
                    JSXMemberExpr {
                        obj: Ident(
                            Ident {
                                span: Span {
                                    lo: BytePos(
                                        8,
                                    ),
                                    hi: BytePos(
                                        9,
                                    ),
                                    ctxt: #0,
                                },
                                sym: Atom('A' type=inline),
                                optional: false,
                            },
                        ),
                        prop: Ident {
                            span: Span {
                                lo: BytePos(
                                    10,
                                ),
                                hi: BytePos(
                                    11,
                                ),
                                ctxt: #0,
                            },
                            sym: Atom('b' type=static),
                            optional: false,
                        },
                    },
                ),
            },
        ),
    },
    is_static: false,
}
